internal/xds/translator/testdata/out/xds-ir/jwt-from-multiple-listeners.listeners.yaml
- address:
    socketAddress:
      address: 0.0.0.0
      portValue: 19003
  bypassOverloadManager: true
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.health_check
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
            headers:
            - name: :path
              stringMatch:
                exact: /ready
            passThroughMode: false
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            suppressEnvoyHeaders: true
        routeConfig:
          name: ready_route
          virtualHosts:
          - domains:
            - '*'
            name: ready_route
            routes:
            - directResponse:
                status: 500
              match:
                prefix: /
        statPrefix: eg-ready-http
  name: envoy-gateway-proxy-ready-0.0.0.0-19003
- address:
    socketAddress:
      address: 0.0.0.0
      portValue: 10080
  defaultFilterChain:
    filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        commonHttpProtocolOptions:
          headersWithUnderscoresAction: REJECT_REQUEST
        http2ProtocolOptions:
          initialConnectionWindowSize: 1048576
          initialStreamWindowSize: 65536
          maxConcurrentStreams: 100
        httpFilters:
        - name: envoy.filters.http.jwt_authn
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
            providers:
              jwt1_cb766da7fa6f1202:
                forward: true
                fromCookies:
                - AccessTokenDomain1
                issuer: https://accounts.google.com
                normalizePayloadInMetadata:
                  spaceDelimitedClaims:
                  - scope
                  - scp
                payloadInMetadata: jwt1
                remoteJwks:
                  asyncFetch: {}
                  httpUri:
                    cluster: www_googleapis_com_443
                    timeout: 10s
                    uri: https://www.googleapis.com/oauth2/v3/certs
              jwt2_d1e60459ce7ec72c:
                forward: true
                fromCookies:
                - AccessTokenDomain2
                issuer: https://accounts.google.com
                normalizePayloadInMetadata:
                  spaceDelimitedClaims:
                  - scope
                  - scp
                payloadInMetadata: jwt2
                remoteJwks:
                  asyncFetch: {}
                  httpUri:
                    cluster: www_googleapis_com_443
                    timeout: 10s
                    uri: https://www.googleapis.com/oauth2/v3/certs
            requirementMap:
              jwt1-or-missing_6f7e920fc2a0617c:
                requiresAny:
                  requirements:
                  - providerName: jwt1_cb766da7fa6f1202
                  - allowMissing: {}
              jwt2-or-missing_554e269f8327a7aa:
                requiresAny:
                  requirements:
                  - providerName: jwt2_d1e60459ce7ec72c
                  - allowMissing: {}
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            suppressEnvoyHeaders: true
        mergeSlashes: true
        normalizePath: true
        pathWithEscapedSlashesAction: UNESCAPE_AND_REDIRECT
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: envoy-gateway-system/external-gateway/domain1-example-com-http
        serverHeaderTransformation: PASS_THROUGH
        statPrefix: http-10080
        useRemoteAddress: true
    name: envoy-gateway-system/external-gateway/domain1-example-com-http
  name: envoy-gateway-system/external-gateway/domain1-example-com-http
  perConnectionBufferLimitBytes: 32768
